Bug 2049689: Include border on smartbar for high contrast mode r=desktop-theme-reviewers,Itiel
Add a border on HCM for the smartbar

Differential Revision: https://phabricator.services.mozilla.com/D309168

UltraBlame original commit: f90a2e4e45c0b8610d8eca9ffeab25f9ca6fa40e

--- a/browser/themes/shared/smartbar.css
+++ b/browser/themes/shared/smartbar.css
@@ -33,6 +33,7 @@
   --urlbarView-row-padding-inline: var(--space-small);
   --urlbarView-row-padding-block: var(--space-small);
   --urlbarView-labeled-row-margin-top: 0;
+  --urlbar-background-border: var(--border-width) solid var(--border-color-transparent);
 
   --urlbarView-small-font-size: var(--font-size-small);
 
